--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -38,6 +38,18 @@
   &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp <a href="http://www.myspace.com/digaritmo">The digaritmo myspace </a>
   or<a href="http://www.reverbnation.com/digaritmo"> reverbnation</a>  
 </p>
-<yt>   
+<sc>
+<object height="81" width="100%"> <param name="movie" value="http://player.soundcloud.com/player.swf?url=http%3A%2F%2Fapi.soundcloud.com%2Ftracks%2F14466791&amp;
+show_comments=true&amp;auto_play=true&amp;color=B45F06"></param>
+ <param name="allowscriptaccess" value="always"></param> 
+ <embed allowscriptaccess="always" height="81" 
+ src="http://player.soundcloud.com/player.swf?url=http%3A%2F%2Fapi.soundcloud.com%2Ftracks%2F14466791&amp;show_comments=true&amp;auto_play=true&amp;
+ color=B45F06" type="application/x-shockwave-flash" width="100%"></embed> </object>   <span><a href="http://soundcloud.com/digaritmo/shameless-pain">Shameless Pain</a> 
+ by <a href="http://soundcloud.com/digaritmo">digaritmo</a></span>
+</sc>
+<yt> 
+<br>
+<br>
+The first live performance of Awaken:  
   <iframe width="640" height="390" src="http://www.youtube.com/embed/8yGtX6fupqI?rel=0" frameborder="0" allowfullscreen></iframe>  
 </yt>
