--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,55 +1,62 @@
-<fb>
- <iframe src="http://www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook.com%2Fpages%2FDigaritmo%2F177991115583456&amp;width=292&amp;colorscheme=dark&amp;show_faces=true&amp;
- stream=true&amp;header=false&amp;height=395" scrolling="no" frameborder="0" 
- style="border:none; overflow:hidden; width:292px; height:395px;" 
- allowTransparency="true"></iframe>
- </fb>
-<p>
+<smr>
   digaritmo guitar duo consists of 2 vibrant musicians, Dirkie van Staden & 
   Rick Kleinhans. We are a fresh, unique and energetic duo from South Africa. 
   Our 'vibe' includes a variety of styles and a fusion of genres like Acoustic 
-  Rock, Blues, Flamenco, Instrumental Pop, Reggae, Gypsy, Classical and Spanish.
-  digaritmo can be loosly translated from Spanish to mean speak rhythm<br><br> 
+  Rock, Blues, Flamenco, Instrumental Pop, Reggae, Gypsy, Classical and Spanish. 
+  digaritmo can be loosly translated from Spanish to mean speak rhythm 
+  <br> <br>
   We have a lot of exiting upcoming projects after being finalists at the Yamaha 
-  Young Talent Competition in 2010 and performing 3 shows at the 2011 KKNK. 
-  We are currently working on our debut album (Awaken), which will be released 
-  at the end of 2011. <br><br> Our show includes mostly original compositions as well as 
-  arrangements of popular music from artists like Rodrigo & Gabriela and music 
-  from the famous film scores of - "Desperado" & "Once upon a time in Mexico". 
-  <br><br> This website is currently under construction.  <br>
-  In the meantime you can find us at the following places: <br>
-  <br> For general updates, information and more: &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
-  &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
-  &nbsp&nbsp For home studio recordings of our music:<br> 
-  &nbsp&nbsp <a href="http://en-gb.facebook.com/pages/Digaritmo/177991115583456">
-  The digaritmo facebook page</a> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
-  &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
-  &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
-  &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp 
-  <a href="http://soundcloud.com/digaritmo">The digaritmo soundcloud page</a>
-  <br> 
-  For music videos, interviews, live performaces &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
-  &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp And if you prefer these websites you can <br> and behind the scenes:
-  &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
-  &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
-  &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
-  &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp also find us on:<br>
-  &nbsp&nbsp <a href="http://www.youtube.com/user/digaritmo">The digaritmo YouTube channel</a> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
-  &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp <a href="http://www.myspace.com/digaritmo">The digaritmo myspace </a>
-  or<a href="http://www.reverbnation.com/digaritmo"> reverbnation</a>  
-</p>
+  Young Talent Competition in 2010 and performing 3 shows at the 2011 KKNK. We 
+  are currently working on our debut album (Awaken), which will be released at 
+  the end of 2011. 
+  <br> <br>
+  Our show includes mostly original compositions as well as arrangements of popular 
+  music from artists like Rodrigo & Gabriela and music from the famous film scores 
+  of - "Desperado" & "Once upon a time in Mexico". 
+  <br><br>
+  This website is currently under construction. 
+  In the meantime you can find us at the following places: 
+  <br><br>
+  For general updates, information and more:                           
+  <br> &nbsp <a href="http://en-gb.facebook.com/pages/Digaritmo/177991115583456"> The digaritmo facebook page</a> 
+  <br> For music videos, interviews, live performaces 
+  <br> and behind the scenes:                                                         
+  <br> &nbsp <a href="http://www.youtube.com/digaritmo"> The digaritmo YouTube channel</a> 
+  <br><br>
+</smr>
+
+<fb>
+ <iframe src="http://www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook.com%2Fpages%2FDigaritmo%2F177991115583456&amp;width=292&amp;
+ colorscheme=light&amp;show_faces=true&amp;stream=true&amp;header=false&amp;
+ height=395" scrolling="no" frameborder="0" style="border:none; overflow:hidden; 
+ width:292px; height:395px;" allowTransparency="true"></iframe>
+</fb>
+ 
+<rght>
+  <br><br><br>
+  For home studio recordings of our music:                        
+  <br> &nbsp <a href="http://soundcloud.com/digaritmo"> The digaritmo soundcloud page</a> 
+  <br> And if you prefer these websites you can also find us on:                         
+  <br> &nbsp <a href="http://www.myspace.com/digaritmo"> myspace  </a> 
+  <a href="http://www.twitter.com/digaritmo"> twitter </a> 
+  <a href="http://www.reverbnation.com/digaritmo"> and  reverbnation</a> 
+  <br><br>
+</rght>
+
 <sc>
-<object height="81" width="100%"> <param name="movie" value="http://player.soundcloud.com/player.swf?url=http%3A%2F%2Fapi.soundcloud.com%2Ftracks%2F14466791&amp;
-show_comments=true&amp;auto_play=true&amp;color=B45F06"></param>
- <param name="allowscriptaccess" value="always"></param> 
- <embed allowscriptaccess="always" height="81" 
- src="http://player.soundcloud.com/player.swf?url=http%3A%2F%2Fapi.soundcloud.com%2Ftracks%2F14466791&amp;show_comments=true&amp;auto_play=true&amp;
- color=B45F06" type="application/x-shockwave-flash" width="100%"></embed> </object>   <span><a href="http://soundcloud.com/digaritmo/shameless-pain">Shameless Pain</a> 
- by <a href="http://soundcloud.com/digaritmo">digaritmo</a></span>
+  <object height="81" width="100%"> <param name="movie" value="http://player.soundcloud.com/player.swf?url=http%3A%2F%2Fapi.soundcloud.com%2Ftracks%2F14466791&amp;
+  show_comments=true&amp;auto_play=true&amp;color=B45F06"></param>
+  <param name="allowscriptaccess" value="always"></param> 
+  <embed allowscriptaccess="always" height="81" 
+  src="http://player.soundcloud.com/player.swf?url=http%3A%2F%2Fapi.soundcloud.com%2Ftracks%2F14466791&amp;show_comments=true&amp;auto_play=true&amp;
+  color=B45F06" type="application/x-shockwave-flash" width="100%"></embed> </object>   <span><a href="http://soundcloud.com/digaritmo/shameless-pain">Shameless Pain</a> 
+  by <a href="http://soundcloud.com/digaritmo">digaritmo</a></span>
 </sc>
+
 <yt> 
 <br>
 <br>
 The first live performance of Awaken:  
   <iframe width="640" height="390" src="http://www.youtube.com/embed/8yGtX6fupqI?rel=0" frameborder="0" allowfullscreen></iframe>  
 </yt>
+
