--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,6 +6,8 @@
     <%= render 'layouts/stylesheets' %>
     <%= javascript_include_tag :defaults %> 
     
+    <meta property="fb:page_id" content="177991115583456" />
+    
     <script type="text/javascript">
       var _gaq = _gaq || [];
       _gaq.push(['_setAccount', 'UA-23130479-1']);
@@ -15,10 +17,9 @@
        ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
        var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
     })();
-
-    </script>
-    
+    </script>    
   </head>
+  
   <body>
     <div class="container">
       <%= render 'layouts/header' %>
@@ -32,4 +33,5 @@
       <%= debug(params) if Rails.env.development? %>
     </div>
   </body>
+  
 </html>
