--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,4 +1,12 @@
 <footer>
-  <nav class="round">	
-  </nav>
+  <nav class="round"> 
+  <ul>
+   <a href="http://facebook.com/digaritmo"><%= facebook %></a>
+   <a href="http://www.youtube.com/user/digaritmo"><%= youtube%></a>
+   <a href="http://twitter.com/digaritmo"><%= twitter%></a>
+   <a href="http://soundcloud.com/digaritmo"><%= soundcloud%></a>
+   <a href="http://www.myspace.com/digaritmo"><%= myspace%></a>
+   <a href="http://www.reverbnation.com/digaritmo"><%= reverb%></a>
+   </ul>
+</nav>
 </footer>
