--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,62 +1,26 @@
+<h4>Welcome!</h4>
+
 <smr>
-  digaritmo guitar duo consists of 2 vibrant musicians, Dirkie van Staden & 
-  Rick Kleinhans. We are a fresh, unique and energetic duo from South Africa. 
-  Our 'vibe' includes a variety of styles and a fusion of genres like Acoustic 
-  Rock, Blues, Flamenco, Instrumental Pop, Reggae, Gypsy, Classical and Spanish. 
-  digaritmo can be loosly translated from Spanish to mean speak rhythm 
-  <br> <br>
-  We have a lot of exiting upcoming projects after being finalists at the Yamaha 
-  Young Talent Competition in 2010 and performing 3 shows at the 2011 KKNK. We 
-  are currently working on our debut album (Awaken), which will be released at 
-  the end of 2011. 
-  <br> <br>
-  Our show includes mostly original compositions as well as arrangements of popular 
-  music from artists like Rodrigo & Gabriela and music from the famous film scores 
-  of - "Desperado" & "Once upon a time in Mexico". 
-  <br><br>
-  This website is currently under construction. 
-  In the meantime you can find us at the following places: 
-  <br><br>
-  For general updates, information and more:                           
-  <br> &nbsp <a href="http://en-gb.facebook.com/pages/Digaritmo/177991115583456"> The digaritmo facebook page</a> 
-  <br> For music videos, interviews, live performaces 
-  <br> and behind the scenes:                                                         
-  <br> &nbsp <a href="http://www.youtube.com/digaritmo"> The digaritmo YouTube channel</a> 
-  <br><br>
+
+Welcome to DigaRitmo guitar duo's website. 
+We hope you enjoy the content ! <br><br>
+You should find what your looking for here, if 
+you don't please leave a comment and we'll find it for you. <br><br> &nbsp
+
 </smr>
 
-<fb>
- <iframe src="http://www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook.com%2Fpages%2FDigaritmo%2F177991115583456&amp;width=292&amp;
- colorscheme=light&amp;show_faces=true&amp;stream=true&amp;header=false&amp;
- height=395" scrolling="no" frameborder="0" style="border:none; overflow:hidden; 
- width:292px; height:395px;" allowTransparency="true"></iframe>
-</fb>
- 
-<rght>
-  <br><br><br>
-  For home studio recordings of our music:                        
-  <br> &nbsp <a href="http://soundcloud.com/digaritmo"> The digaritmo soundcloud page</a> 
-  <br> And if you prefer these websites you can also find us on:                         
-  <br> &nbsp <a href="http://www.myspace.com/digaritmo"> myspace  </a> 
-  <a href="http://www.twitter.com/digaritmo"> twitter </a> 
-  <a href="http://www.reverbnation.com/digaritmo"> and  reverbnation</a> 
-  <br><br>
-</rght>
+<ph2>
+<embed type="application/x-shockwave-flash" src="https://picasaweb.google.com/s/c/bin/slideshow.swf" 
+width="350" height="450" flashvars="host=picasaweb.google.com&hl=en_US&feat=flashalbum&RGB=0x000000&feed=https%3A%2F%2Fpicasaweb.google.com%2Fdata%2Ffeed%2Fapi%2Fuser%2Fdigaritmo%2Falbumid%2F5611548676464110433%3Falt%3Drss%26kind%3Dphoto%26authkey%3DGv1sRgCPnM2_mn35PZLA%26hl%3Den_US"
+pluginspage="http://www.macromedia.com/go/getflashplayer"></embed>
+</ph2>
 
-<sc>
-  <object height="81" width="100%"> <param name="movie" value="http://player.soundcloud.com/player.swf?url=http%3A%2F%2Fapi.soundcloud.com%2Ftracks%2F14466791&amp;
-  show_comments=true&amp;auto_play=true&amp;color=B45F06"></param>
-  <param name="allowscriptaccess" value="always"></param> 
-  <embed allowscriptaccess="always" height="81" 
-  src="http://player.soundcloud.com/player.swf?url=http%3A%2F%2Fapi.soundcloud.com%2Ftracks%2F14466791&amp;show_comments=true&amp;auto_play=true&amp;
-  color=B45F06" type="application/x-shockwave-flash" width="100%"></embed> </object>   <span><a href="http://soundcloud.com/digaritmo/shameless-pain">Shameless Pain</a> 
-  by <a href="http://soundcloud.com/digaritmo">digaritmo</a></span>
-</sc>
+<comments>
+<div id="fb-root"></div><script src="http://connect.facebook.net/en_US/all.js#xfbml=1">
+</script><fb:comments href="digaritmo.com" num_posts="5" width="345" 
+colorscheme="dark"></fb:comments>
+</comments>
 
-<yt> 
-<br>
-<br>
-The first live performance of Awaken:  
-  <iframe width="640" height="390" src="http://www.youtube.com/embed/8yGtX6fupqI?rel=0" frameborder="0" allowfullscreen></iframe>  
-</yt>
 
+
+<br clear="all" />
