--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,3 +1,18 @@
 <header>
   <%= link_to logo, root_path %>  
 </header>
+<nav class="round">
+  <ul>  
+  &nbsp
+    <li><%= link_to "Home", root_path %></li>      
+    <li><%= link_to "Press", press_path %></li>  
+     <li><%= link_to "About Us", about_path %></li>       
+    <li><%= link_to "Social Feeds", feeds_path %></li>    
+    <li><%= link_to "Live Events", events_path %></li>   
+    <li><%= link_to "Our Music", music_path %></li> 
+    <li><%= link_to "Our Videos", videos_path %></li>   
+    <li><%= link_to "Photos", pictures_path %></li>      
+    <li><%= link_to "Shop", shop_path %></li>  
+    <li><%= link_to "Contact Us", contact_path %></li>
+  </ul>
+</nav>
