--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,7 +1,38 @@
-<h1>About Us</h1>
-<p>
-  <a href="http://railstutorial.org/">Ruby on Rails Tutorial</a>
-  is a project to make a book and screencasts to teach web development
-  with <a href="http://rubyonrails.org/">Ruby on Rails</a>. This
-  is the sample application for the tutorial.
+<h1>About digaritmo</h1>
+<p> 
+ <b>Today</b>
+ <br>
+ <br>
+  We are a fresh, unique and energetic duo from South Africa. We have a lot of upcoming 
+  projects after being finalists at the Yamaha Young Talent Competition in 2010 and performing
+  at the 2011 KKNK. This includes the debut album (<i>Awaken</i>) which we are currently working on. 
+  We hope to release it in early 2012. 
+  <br>
+  <br>
+  We are also performing in shows all accross South Africa in 2011. This includes the Grahams Town Music festival,
+  <i>inniBos</i> Music Festival and many more. Our show includes original compositions,
+  arrangements of popular music from artists like Rodrigo & Gabriela and Carlos Santana as well as
+  music from the famous film scores - "El Mariachi" & "Once upon a time in Mexico". 
+  <br>
+  <br>
+  
+ <b>The Name</b>
+ <br>
+ <br>
+  We originally performed as <i>The Hats</i>. We chose that name on the spur of the moment when we needed
+  to put a name on the entry form for the 2010 Yamaha Young Talent competition. However we later found 
+  out there was a UK based band who were also <i>The Hats</i> and they were releasing a cd.
+  We then decided to change our name. We knew that it would have to be something original, something that
+  described our music and something which would not have been used anywhere else. That was the birth of
+  DigaRitmo. DigaRitmo can be loosely translated from Spanish to mean 'speak rhythm'. <br>
+ <br> 
+ <br>
+ 
+ <b>The History</b>
+ <br>
+ <br>
+   In October 2010 we decided at the last moment to enter the Yamaha Young Talent competition. 
+   Then after getting to the finals in Johannesburg, playing the encore and getting so much positive
+   vibe afterwards from the audience we decided to 'play for keeps.' Since then we have performed about 
+   50 times including performances at the 2011 KKNK and venues such as the Dorpstreet theatre in Stellenbosch. 
 </p>
