--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,5 +1,9 @@
-<h1>Contact</h1>
-<p>
-  Contact Ruby on Rails Tutorial about the sample app at the
-  <a href="http://railstutorial.org/feedback">feedback page</a>.
-</p>
+<h1>Contact Us</h1>
+
+<bc>
+<img src="https://lh3.googleusercontent.com/-Xe5ElhpJiWw/TeFBoh1_C4I/AAAAAAAAAJA/XIf7LGKJVV8/s640/business%252520card%252520web.jpg" 
+height="400" width="680" />
+</bc>
+
+
+
