--- a/public/stylesheets/custom.css
+++ b/public/stylesheets/custom.css
@@ -1,5 +1,6 @@
 .container {
-  width: 710px;
+  width: 812px;
+  overflow: hidden;
 }
 
 body {
@@ -26,10 +27,9 @@ section {
 }
 
 smr{
-  width: 370px;
-  float: left;
   color: white;
   font-size: 120%;
+  font-weight: bold;
   background: #134F5C;
 }
 
@@ -42,26 +42,95 @@ rght{
 }
 
 fb {
-  float: right;
+  float: left;
   color: white;
   background: white;
 }
 
+like {
+  position: relative;
+  left: 173px;
+}
+
+tw {
+  float: right;
+  color: white;  
+  background: #134F5C;
+}
+
 yt {
+  position: relative;
+  left: 12px;
   font-size: 120%;
-  color: white;
+  color: #134F5C;
+  background: #134F5C;
+}
+
+ph {
+  position: relative;
+  left: 12px;
+  font-size: 50;
+  color: #134F5C;
+  background: #134F5C;
+}
+
+ph2 {
+float: right;
+ /* position: relative;
+  left: 20px;
+  bottom: 120px;*/
+  color: #134F5C;
   background: #134F5C;
 }
 
 sc {
-  color: white;
-  font-size: 100%;
+  color: #B45F06;
+  font-size: 140%;
+  background: #134F5C;
+}
+
+comments{
+  position: relative;
+  left: 2px;
+  bottom: 20px;
+  color: #134F5C;
   background: #134F5C;
 }
 
 section h1 {
   font-size: 200%;
-  color: white;
+  color: #B45F06;
+}
+
+poster {
+   position: relative;
+   left: 80px;
+}
+
+bc {
+   position: relative;
+   left: 55px;
+}
+
+h2 {
+   font-size: 300%;
+   color: #B45F06;
+   position: relative;
+   left: 320px;
+}
+
+h3 {
+   font-size: 300%;
+   color: #B45F06;
+   position: relative;
+   left: 280px;
+}
+
+h4 {
+   font-size: 250%;
+   color: #B45F06;
+   position: relative;
+   left: 320px;
 }
 
 /* Links */
@@ -83,10 +152,6 @@ a:visited {
 /* Navigation */
 
 nav {
-  float: right;
-}
-
-nav {
   background-color: #134F5C;
   padding: 0 0.7em;
   white-space: nowrap;
@@ -95,6 +160,7 @@ nav {
 nav ul {
   margin: 0;
   padding: 0;
+  font-size: 129%;
 }
 
 nav ul li {
@@ -106,10 +172,6 @@ nav ul li {
 nav ul li a {
   padding: 0 5px;
   font-weight: bold;
-}
-
-nav ul li a:visited {
-  color: white;
 }
 
 nav ul li a:hover {
@@ -144,10 +206,11 @@ a.signup_button {
 footer {
   text-align: center;
   margin-top: 10px;
-  width: 710px;
+  width: 812px;
   margin-left: auto;
   margin-right: auto;
 }
+
 
 footer nav {
   float: none;
