--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,8 +1,8 @@
 <h1>Contact Us</h1>
 
-<bc>
-<img src="https://lh3.googleusercontent.com/-Xe5ElhpJiWw/TeFBoh1_C4I/AAAAAAAAAJA/XIf7LGKJVV8/s640/business%252520card%252520web.jpg" 
-height="400" width="680" />
+<bc class="round">
+<img src="../images/bcard.png" 
+height="412" width="700" />
 </bc>
 
 
