--- a/public/stylesheets/custom.css
+++ b/public/stylesheets/custom.css
@@ -12,7 +12,7 @@ header {
 }
 
 header img {
-  background: #134F5C;
+  background:  #4c2818;
   -moz-border-radius:    10px;
   -webkit-border-radius: 10px;
   border-radius:         10px;
@@ -23,14 +23,14 @@ section {
   font-size: 100%;
   padding: 20px;
   color: white;
-  background: #134F5C;
+  background:  #4c2818;
 }
 
 smr{
   color: white;
   font-size: 120%;
   font-weight: bold;
-  background: #134F5C;
+  background:  #4c2818;
 }
 
 rght{
@@ -38,7 +38,7 @@ rght{
   float: right;
   color: white;
   font-size: 120%;
-  background: #134F5C;
+  background:  #4c2818;
 }
 
 fb {
@@ -55,23 +55,23 @@ like {
 tw {
   float: right;
   color: white;  
-  background: #134F5C;
+  background:  #4c2818;
 }
 
 yt {
   position: relative;
   left: 12px;
   font-size: 120%;
-  color: #134F5C;
-  background: #134F5C;
+  color:  #4c2818;
+  background:  #4c2818;
 }
 
 ph {
   position: relative;
   left: 12px;
   font-size: 50;
-  color: #134F5C;
-  background: #134F5C;
+  color:  #4c2818;
+  background:  #4c2818;
 }
 
 ph2 {
@@ -79,27 +79,27 @@ float: right;
  /* position: relative;
   left: 20px;
   bottom: 120px;*/
-  color: #134F5C;
-  background: #134F5C;
+  color:  #4c2818;
+  background:  #4c2818;
 }
 
 sc {
-  color: #B45F06;
+  color: #ffffff;
   font-size: 140%;
-  background: #134F5C;
+  background:  #4c2818;
 }
 
 comments{
   position: relative;
   left: 2px;
   bottom: 20px;
-  color: #134F5C;
-  background: #134F5C;
+  color:  #4c2818;
+  background:  #4c2818;
 }
 
 section h1 {
   font-size: 200%;
-  color: #B45F06;
+  color: #fc600c;
 }
 
 poster {
@@ -109,26 +109,26 @@ poster {
 
 bc {
    position: relative;
-   left: 55px;
+   left: 38px;
 }
 
 h2 {
    font-size: 300%;
-   color: #B45F06;
+   color: #fc600c;
    position: relative;
    left: 320px;
 }
 
 h3 {
    font-size: 300%;
-   color: #B45F06;
+   color: #fc600c;
    position: relative;
    left: 280px;
 }
 
 h4 {
    font-size: 250%;
-   color: #B45F06;
+   color: #fc600c;
    position: relative;
    left: 320px;
 }
@@ -136,23 +136,23 @@ h4 {
 /* Links */
 
 a {
-  color: #B45F06;
+  color: #fc600c;
   text-decoration: none;
 }
 
 a:hover {
-  color: #B45F06;
+  color: #fc600c;
   text-decoration: underline;
 }
 
 a:visited {
-  color: #B45F06;
+  color: #fc600c;
 }
 
 /* Navigation */
 
 nav {
-  background-color: #134F5C;
+  background-color:  #4c2818;
   padding: 0 0.7em;
   white-space: nowrap;
 }
