--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -6,7 +6,7 @@
   &nbsp
     <li><%= link_to "Home", root_path %></li>      
     <li><%= link_to "Press", press_path %></li>  
-     <li><%= link_to "About Us", about_path %></li>       
+     <li><%= link_to "About", about_path %></li>       
     <li><%= link_to "Social Feeds", feeds_path %></li>    
     <li><%= link_to "Live Events", events_path %></li>   
     <li><%= link_to "Our Music", music_path %></li> 
