--- a/public/stylesheets/custom.css
+++ b/public/stylesheets/custom.css
@@ -208,7 +208,8 @@ footer {
   margin-top: 10px;
   width: 812px;
   margin-left: auto;
-  margin-right: auto;
+  margin-right: auto;  
+  padding-bottom: 20px;
 }
 
 
