--- a/app/views/pages/events.html.erb
+++ b/app/views/pages/events.html.erb
@@ -1,4 +1,4 @@
-<h2>Events</h2>
+<h4><%=eventsH%></h4>
 
 <poster>
 <a href="https://www.facebook.com/event.php?eid=203378493031813" target="_blank">
