--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,4 @@
-<h4>Welcome!</h4>
+<h4><%=welcome%></h4>
 
 <smr>
 
@@ -20,7 +20,5 @@ pluginspage="http://www.macromedia.com/go/getflashplayer"></embed>
 </script><fb:comments href="digaritmo.com" num_posts="5" width="345" 
 colorscheme="dark"></fb:comments>
 </comments>
-
-
 
 <br clear="all" />
