--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -3,16 +3,15 @@
 </header>
 <nav class="round">
   <ul>  
-  &nbsp
-    <li><%= link_to "Home", root_path %></li>      
-    <li><%= link_to "Press", press_path %></li>  
-     <li><%= link_to "About", about_path %></li>       
-    <li><%= link_to "Social Feeds", feeds_path %></li>    
-    <li><%= link_to "Live Events", events_path %></li>   
-    <li><%= link_to "Our Music", music_path %></li> 
-    <li><%= link_to "Our Videos", videos_path %></li>   
-    <li><%= link_to "Photos", pictures_path %></li>      
-    <li><%= link_to "Shop", shop_path %></li>  
-    <li><%= link_to "Contact Us", contact_path %></li>
+    <li><%= link_to home, root_path %></li>      
+    <li><%= link_to press, press_path %></li>  
+     <li><%= link_to about, about_path %></li>       
+    <li><%= link_to feeds, feeds_path %></li>    
+    <li><%= link_to events, events_path %></li>   
+    <li><%= link_to music, music_path %></li> 
+    <li><%= link_to videos, videos_path %></li>   
+    <li><%= link_to photos, pictures_path %></li>      
+    <li><%= link_to shop, shop_path %></li>  
+    <li><%= link_to contact, contact_path %></li>
   </ul>
 </nav>
