--- a/app/views/pages/feeds.html.erb
+++ b/app/views/pages/feeds.html.erb
@@ -1,4 +1,4 @@
-<h1>Social Feeds</h1>
+<h3><%=feedsH%></h3>
 
 <fb>
 	<div id="fb-root"></div><script src="http://connect.facebook.net/en_US/all.js#xfbml=1">
