--- a/public/stylesheets/custom.css
+++ b/public/stylesheets/custom.css
@@ -1,5 +1,5 @@
 .container {
-  width: 812px;
+  width: 867px;
   overflow: hidden;
 }
 
@@ -15,7 +15,7 @@ header img {
   background:  #4c2818;
   -moz-border-radius:    10px;
   -webkit-border-radius: 10px;
-  border-radius:         10px;
+  border-radius:         10px;  
 }
 
 section {
@@ -23,7 +23,10 @@ section {
   font-size: 100%;
   padding: 20px;
   color: white;
-  background:  #4c2818;
+  background:  #4c2818;  
+  border-style:solid;
+  border-color:black;
+  border-width:5px;
 }
 
 smr{
@@ -90,11 +93,8 @@ sc {
 }
 
 comments{
-  position: relative;
-  left: 2px;
-  bottom: 20px;
-  color:  #4c2818;
-  background:  #4c2818;
+  float: left;
+  background: #4c2818;
 }
 
 section h1 {
@@ -104,7 +104,7 @@ section h1 {
 
 poster {
    position: relative;
-   left: 80px;
+   left: 110px;
 }
 
 bc {
@@ -116,21 +116,19 @@ h2 {
    font-size: 300%;
    color: #fc600c;
    position: relative;
-   left: 320px;
+   left: 355px;
 }
 
 h3 {
    font-size: 300%;
    color: #fc600c;
    position: relative;
-   left: 280px;
+   left: 310px;
 }
 
 h4 {
-   font-size: 250%;
-   color: #fc600c;
    position: relative;
-   left: 320px;
+   left: 321px;
 }
 
 /* Links */
@@ -154,7 +152,10 @@ a:visited {
 nav {
   background-color:  #4c2818;
   padding: 0 0.7em;
-  white-space: nowrap;
+  white-space: nowrap;  
+  border-style:solid;
+  border-color:black;
+  border-width:5.5px;
 }
 
 nav ul {
@@ -167,10 +168,11 @@ nav ul li {
   list-style-type: none;
   display: inline-block;
   padding: 0.2em 0;
+  position: relative;
+  top: 3px;
 }
 
 nav ul li a {
-  padding: 0 5px;
   font-weight: bold;
 }
 
@@ -206,7 +208,7 @@ a.signup_button {
 footer {
   text-align: center;
   margin-top: 10px;
-  width: 812px;
+  width: 867px;
   margin-left: auto;
   margin-right: auto;  
   padding-bottom: 20px;
@@ -215,6 +217,12 @@ footer {
 
 footer nav {
   float: none;
+  padding: 0 0.7em;
+}
+
+footer nav ul a {
+  float: none;
+  padding: 0 0.9em;
 }
 
 /* User show page */
