--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,7 +1,7 @@
 <h1><%=contactH%></h1>
 
 <bc class="round">
-<img src="../images/bcard.png" 
+<img src="../images/bscard.png" 
 height="412" width="700" />
 </bc>
 
