--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -3,13 +3,13 @@
 </header>
 <nav class="round">
   <ul>  
-    <li><%= link_to home, root_path %></li>      
+    <li><%= link_to homeNav, root_path %></li>      
     <li><%= link_to press, press_path %></li>  
-     <li><%= link_to about, about_path %></li>       
+     <li><%= link_to aboutNav, about_path %></li>       
     <li><%= link_to feeds, feeds_path %></li>    
     <li><%= link_to events, events_path %></li>   
     <li><%= link_to music, music_path %></li> 
-    <li><%= link_to videos, videos_path %></li>   
+    <li><%= link_to videosNav, videos_path %></li>   
     <li><%= link_to photos, pictures_path %></li>      
     <li><%= link_to shop, shop_path %></li>  
     <li><%= link_to contact, contact_path %></li>
