--- a/app/views/pages/pictures.html.erb
+++ b/app/views/pages/pictures.html.erb
@@ -1,7 +1,7 @@
 <h2><%=photosH%></h2>
 
 <smr>
-Walking aroun in Stellnbosch:<br><br>&nbsp
+Walking around in Stellenbosch:<br><br>&nbsp
 </smr>
 <ph>
  <embed type="application/x-shockwave-flash"
@@ -11,7 +11,7 @@ Walking aroun in Stellnbosch:<br><br>&nbsp
 </ph>
 
 <smr><br><br>
-Yamaha Young Talant Finals:<br><br>&nbsp
+Yamaha Young Talent Finals:<br><br>&nbsp
 </smr>
 <ph>
  <embed type="application/x-shockwave-flash" src="https://picasaweb.google.com/s/c/bin/slideshow.swf" 
