--- a/app/views/pages/events.html.erb
+++ b/app/views/pages/events.html.erb
@@ -2,7 +2,7 @@
 
 <poster>
 <a href="https://www.facebook.com/event.php?eid=203378493031813" target="_blank">
-<img src="https://lh3.googleusercontent.com/-MPouyaXIRXg/TeE6BZd02JI/AAAAAAAAAI4/RSJHc3EMNEw/s800/The%252520Ladle%252520Poster.jpg" 
+<img src="https://lh6.googleusercontent.com/-fS8BbkAwD2Q/TeUwS18d78I/AAAAAAAAAJo/xl4pc2gXKiw/s800/posterl.jpg" 
 height="800" width="623" alt="DigaRitmo Live at "The Ladle" in Greyton!" />
 </a>
 
