--- a/app/views/pages/feeds.html.erb
+++ b/app/views/pages/feeds.html.erb
@@ -18,13 +18,13 @@ new TWTR.Widget({
   height: 500,
   theme: {
 	shell: {
-	  background: '#B45F06',
+	  background: '#0072bc',
 	  color: '#ffffff'
 	},
 	tweets: {
 	  background: '#ffffff',
-	  color: '#000000',
-	  links: '#B45F06'
+	  color: '#303030',
+	  links: '#0072bc'
 	}
   },
   features: {
