--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,24 +1,40 @@
 <h4><%=welcome%></h4>
 
-<smr>
+<squarelogo>
+<img src="../images/squarelogo.jpg" 
+height="128" width="128" />
+</squarelogo>
 
-Welcome to DigaRitmo guitar duo's website. 
+<roundlogo>
+<img src="../images/roundlogo.jpg" 
+height="128" width="128" />
+</roundlogo>
+
+<smrCntr>
+&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
+Welcome to DigaRitmo guitar duo's website.  <br>
+&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
+&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
 We hope you enjoy the content ! <br><br>
-You should find what your looking for here, if 
-you don't please leave a comment and we'll find it for you. <br><br> &nbsp
 
-</smr>
+</smrCntr>
 
-<ph2>
-<embed type="application/x-shockwave-flash" src="https://picasaweb.google.com/s/c/bin/slideshow.swf" 
-width="350" height="450" flashvars="host=picasaweb.google.com&hl=en_US&feat=flashalbum&RGB=0x000000&feed=https%3A%2F%2Fpicasaweb.google.com%2Fdata%2Ffeed%2Fapi%2Fuser%2Fdigaritmo%2Falbumid%2F5611548676464110433%3Falt%3Drss%26kind%3Dphoto%26authkey%3DGv1sRgCPnM2_mn35PZLA%26hl%3Den_US"
-pluginspage="http://www.macromedia.com/go/getflashplayer"></embed>
-</ph2>
+<mail>
+<img style="visibility:hidden;width:0px;height:0px;" border=0 width=0 height=0 src="http://c.gigcount.com/wildfire/IMP/CXNID=2000002.11NXC/bT*xJmx*PTEzMDcwNTU4OTMyMjYmcHQ9MTMwNzA1NTg5NTM1OSZwPTI3MDgxJmQ9cHJvX2ZhbmNvbGxlY3Rvcl9maXJzdF9nZW4m/Zz*xJm9mPTA=.gif" /><object classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000" width="250" height="101"><param name="movie" value="http://cache.reverbnation.com/widgets/swf/44/pro_widget.swf?id=artist_1502427&posted_by=&skin_id=PWFS5008&font_color=333333&street_team=false"></param><param name="allowscriptaccess" value="always"></param><param name="allowNetworking" value="all"></param><param name="allowfullscreen" value="true"></param><param name="wmode" value="transparent"></param><param name="quality" value="best"></param><embed src="http://cache.reverbnation.com/widgets/swf/44/pro_widget.swf?id=artist_1502427&posted_by=&skin_id=PWFS5008&font_color=333333&street_team=false" type="application/x-shockwave-flash" allowscriptaccess="always" allowNetworking="all" allowfullscreen="true" wmode="transparent" quality="best" width="250" height="101"></embed></object><br/><img style="visibility:hidden;width:0px;height:0px;" border=0 width=0 height=0 src="http://www.reverbnation.com/widgets/trk/44/artist_1502427//t.gif" />
+</mail>
+
+<smrCntr2>
+&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
+You should find what your looking for here, <br>
+if you don't please leave a comment and we'll find it for you. <br><br> &nbsp
+</smrCntr2>
 
 <comments>
 <div id="fb-root"></div><script src="http://connect.facebook.net/en_US/all.js#xfbml=1">
-</script><fb:comments href="digaritmo.com" num_posts="5" width="345" 
-colorscheme="dark"></fb:comments>
+</script><fb:comments href="digaritmo.com" num_posts="1" width="440" 
+colorscheme="light"></fb:comments>
 </comments>
+
+
 
 <br clear="all" />
