--- a/app/views/pages/music.html.erb
+++ b/app/views/pages/music.html.erb
@@ -2,15 +2,11 @@
 
 <sc>
 	These are some home studio recordings of our songs:
-	<object height="225" width="100%"> <param name="movie" 
-	value="http://player.soundcloud.com/player.swf?url=http%3A%2F%2Fapi.soundcloud.com%2Fusers%2F4289649&amp;
-	show_comments=true&amp;auto_play=true&amp;show_playcount=true&amp;
-	show_artwork=true&amp;color=B45F06"></param> <param name="allowscriptaccess" 
-	value="always"></param> <embed allowscriptaccess="always" height="225" 
-	src="http://player.soundcloud.com/player.swf?url=http%3A%2F%2Fapi.soundcloud.com%2Fusers%2F4289649&amp;
-	show_comments=true&amp;auto_play=true&amp;show_playcount=true&amp;show_artwork=true&amp;color=B45F06" 
-	type="application/x-shockwave-flash" width="100%"></embed> </object>   
-	<span><a href="http://soundcloud.com/digaritmo">&nbsp Click here to go to our soundcloud page.</a></span>
+	<object height="225" width="100%"> <param name="movie" value="http://player.soundcloud.com/player.swf?url=http%3A%2F%2Fapi.soundcloud.com%2Fusers%2F4289649&amp;
+	show_comments=true&amp;auto_play=true&amp;show_playcount=true&amp;show_artwork=true&amp;color=0072bc"></param> <param name="allowscriptaccess" value="always">
+	</param> <embed allowscriptaccess="always" height="225" src="http://player.soundcloud.com/player.swf?url=http%3A%2F%2Fapi.soundcloud.com%2Fusers%2F4289649&amp;
+	show_comments=true&amp;auto_play=true&amp;show_playcount=true&amp;show_artwork=true&amp;color=0072bc" type="application/x-shockwave-flash" width="100%"></embed> 
+	</object>   <span><a href="http://soundcloud.com/digaritmo">Latest tracks by digaritmo</a></span>
 	<br>&nbsp&nbspWe give you free downloads please give us a like and share on facebook:
 	<br>&nbsp
 </sc>
@@ -18,6 +14,6 @@
 <like class="white">
 <div id="fb-root"></div><script src="http://connect.facebook.net/en_US/all.js#appId=231372543543918&amp;xfbml=1">
 </script><fb:like href="facebook.com/digaritmo" send="true" 
-width="450" show_faces="true" colorscheme="dark" font="verdana"></fb:like>
+width="450" show_faces="true" colorscheme="light" font="verdana"></fb:like>
 
 <br clear="all" />
