--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -20,7 +20,14 @@ We hope you enjoy the content ! <br><br>
 </smrCntr>
 
 <mail>
-<img style="visibility:hidden;width:0px;height:0px;" border=0 width=0 height=0 src="http://c.gigcount.com/wildfire/IMP/CXNID=2000002.11NXC/bT*xJmx*PTEzMDcwNTU4OTMyMjYmcHQ9MTMwNzA1NTg5NTM1OSZwPTI3MDgxJmQ9cHJvX2ZhbmNvbGxlY3Rvcl9maXJzdF9nZW4m/Zz*xJm9mPTA=.gif" /><object classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000" width="250" height="101"><param name="movie" value="http://cache.reverbnation.com/widgets/swf/44/pro_widget.swf?id=artist_1502427&posted_by=&skin_id=PWFS5008&font_color=333333&street_team=false"></param><param name="allowscriptaccess" value="always"></param><param name="allowNetworking" value="all"></param><param name="allowfullscreen" value="true"></param><param name="wmode" value="transparent"></param><param name="quality" value="best"></param><embed src="http://cache.reverbnation.com/widgets/swf/44/pro_widget.swf?id=artist_1502427&posted_by=&skin_id=PWFS5008&font_color=333333&street_team=false" type="application/x-shockwave-flash" allowscriptaccess="always" allowNetworking="all" allowfullscreen="true" wmode="transparent" quality="best" width="250" height="101"></embed></object><br/><img style="visibility:hidden;width:0px;height:0px;" border=0 width=0 height=0 src="http://www.reverbnation.com/widgets/trk/44/artist_1502427//t.gif" />
+<img style="visibility:hidden;width:0px;height:0px;" border=0 width=0 height=0 
+src="http://c.gigcount.com/wildfire/IMP/CXNID=2000002.11NXC/bT*xJmx*PTEzMDcwNTU4OTMyMjYmcHQ9MTMwNzA1NTg5NTM1OSZwPTI3MDgxJmQ9cHJvX2ZhbmNvbGxlY3Rvcl9maXJzdF9nZW4m/Zz*xJm9mPTA=.gif" />
+<object classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000" width="250" height="101"><param name="movie" 
+value="http://cache.reverbnation.com/widgets/swf/44/pro_widget.swf?id=artist_1502427&posted_by=&skin_id=PWFS5008&font_color=333333&street_team=false"></param>
+<param name="allowscriptaccess" value="always"></param><param name="allowNetworking" value="all"></param><param name="allowfullscreen" value="true"></param>
+<param name="wmode" value="transparent"></param><param name="quality" value="best"></param><embed src="http://cache.reverbnation.com/widgets/swf/44/pro_widget.swf?id=artist_1502427&posted_by=&skin_id=PWFS5008&font_color=333333&street_team=false" 
+type="application/x-shockwave-flash" allowscriptaccess="always" allowNetworking="all" allowfullscreen="true" wmode="transparent" quality="best" width="250" height="118"></embed></object><br/>
+<img style="visibility:hidden;width:0px;height:0px;" border=0 width=0 height=0 src="http://www.reverbnation.com/widgets/trk/44/artist_1502427//t.gif" />
 </mail>
 
 <smrCntr2>
