--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -36,12 +36,17 @@ You should find what your looking for here, <br>
 if you don't please leave a comment and we'll find it for you. <br><br> &nbsp
 </smrCntr2>
 
-<comments>
+
+<!--[if IE]><comments2>
 <div id="fb-root"></div><script src="http://connect.facebook.net/en_US/all.js#xfbml=1">
 </script><fb:comments href="digaritmo.com" num_posts="1" width="440" 
 colorscheme="light"></fb:comments>
-</comments>
+</comments2><![endif]-->
 
-
+<![if !IE]><comments>
+<div id="fb-root"></div><script src="http://connect.facebook.net/en_US/all.js#xfbml=1">
+</script><fb:comments href="digaritmo.com" num_posts="1" width="440" 
+colorscheme="light"></fb:comments>
+</comments><![endif]>
 
 <br clear="all" />
