--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -32,7 +32,7 @@ type="application/x-shockwave-flash" allowscriptaccess="always" allowNetworking=
 
 <smrCntr2>
 &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
-You should find what your looking for here, <br>
+You should find what you're looking for here, <br>
 if you don't please leave a comment and we'll find it for you. <br><br> &nbsp
 </smrCntr2>
 
