--- a/app/views/pages/events.html.erb
+++ b/app/views/pages/events.html.erb
@@ -1,9 +1,32 @@
 <h4><%=eventsH%></h4>
 
 <poster>
+<a href="https://www.facebook.com/event.php?eid=116571411762842" target="_blank">
+DigaRitmo Live at 'Ou Meul Teater (Old Mill Theater)' in Paarl !
+<a href="https://www.facebook.com/event.php?eid=203378493031813" target="_blank">
+<img src="https://lh3.googleusercontent.com/-u_acufm7eYY/TfTZFpU0EcI/AAAAAAAAAXM/XSe-4xaDyvk/s800/Die%252520Ou%252520Meul%252520Poster.jpg" 
+height="800" width="623" alt="DigaRitmo Live at 'Ou Meul Teater (Old Mill Theater)' in Paarl !" />
+</a>
+</poster>
+
+<br><br><br>
+
+<poster>
+<a href="https://www.facebook.com/event.php?eid=116530461768341" target="_blank">
+DigaRitmo Live at 'Aan De Braak Teater' in Stellenbosch!
+<a href="https://www.facebook.com/event.php?eid=203378493031813" target="_blank">
+<img src="https://lh3.googleusercontent.com/-u_acufm7eYY/TfTZFpU0EcI/AAAAAAAAAXM/XSe-4xaDyvk/s800/Die%252520Ou%252520Meul%252520Poster.jpg" 
+height="800" width="623" alt="DigaRitmo Live at 'Aan De Braak Teater' in Stellenbosch!" />
+</a>
+</poster>
+
+<br><br><br>
+
+<poster>
+<a href="https://www.facebook.com/event.php?eid=203378493031813" target="_blank">
+DigaRitmo Live at "The Ladle" in Greyton!
 <a href="https://www.facebook.com/event.php?eid=203378493031813" target="_blank">
 <img src="https://lh6.googleusercontent.com/-fS8BbkAwD2Q/TeUwS18d78I/AAAAAAAAAJo/xl4pc2gXKiw/s800/posterl.jpg" 
 height="800" width="623" alt="DigaRitmo Live at "The Ladle" in Greyton!" />
 </a>
-
 </poster>
