--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,5 +1,5 @@
 <footer>
-  <nav class="round"> 
+  <nav> 
   <ul>
    <a href="http://facebook.com/digaritmo"><%= facebook %></a>
    <a href="http://www.youtube.com/user/digaritmo"><%= youtube%></a>
