--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,7 +1,7 @@
 <header>
   <%= link_to logo, root_path %>  
 </header>
-<nav class="round">
+<nav>
   <ul>  
     <li><%= link_to homeNav, root_path %></li>      
     <li><%= link_to press, press_path %></li>  
