--- a/app/views/pages/videos.html.erb
+++ b/app/views/pages/videos.html.erb
@@ -21,7 +21,7 @@ allowfullscreen></iframe>
 
 <smr>
 <br><br>
-DigaRitmo performing Cancion del Mariachi at the KKNK:<br><br>&nbsp
+DigaRitmo at La Dolce Vita after the KKNK:<br><br>&nbsp
 </smr>
 <yt>
 <iframe width="750" height="457" 
@@ -31,7 +31,7 @@ allowfullscreen></iframe>
 
 <smr>
 <br><br>
-DigaRitmo performing gypsy Dusk at the KKNK:<br><br>&nbsp
+DigaRitmo performing Gypsy Dusk at the KKNK:<br><br>&nbsp
 </smr>
 <yt>
 <iframe width="750" height="457" 
