--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -12,7 +12,7 @@
   We are also performing in shows all accross South Africa in 2011. This includes the Grahams Town Music festival,
   <i>inniBos</i> Music Festival and many more. Our show includes original compositions,
   arrangements of popular music from artists like Rodrigo & Gabriela and Carlos Santana as well as
-  music from the famous film scores - "El Mariachi" & "Once upon a time in Mexico". 
+  music from the famous film scores - "Desperado" & "Once upon a time in Mexico". 
   <br>
   <br>
   
