--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -37,6 +37,16 @@
       <%= render 'layouts/footer' %>
       <%= debug(params) if Rails.env.development? %>
       <![endif]>
+      
+      <!--[if lte IE 8]>
+       Welcome to DigaRitmo guitar duo's website. <br>
+       To view the website you need the latest version of Internet Explorer:<br>
+       <a href="http://windows.microsoft.com/en-US/internet-explorer/products/ie/home">
+       Download Internet Explorer 9.<br><br>
+       Or you could use Google Chrome:<br>
+       <a href="http://www.google.com/chrome/intl/en/make/download.html?brand=CHKZ">
+       Download Google Chrome.<br>
+      <![endif]--> 
             
     </div>    
   </body>
