--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -42,10 +42,10 @@
        Welcome to DigaRitmo guitar duo's website. <br>
        To view the website you need the latest version of Internet Explorer:<br>
        <a href="http://windows.microsoft.com/en-US/internet-explorer/products/ie/home">
-       Download Internet Explorer 9.<br><br>
+       Download Internet Explorer 9.</a><br><br>
        Or you could use Google Chrome:<br>
        <a href="http://www.google.com/chrome/intl/en/make/download.html?brand=CHKZ">
-       Download Google Chrome.<br>
+       Download Google Chrome.</a><br>
       <![endif]--> 
             
     </div>    
